syntax = "proto3";
package scene;

import "scene.proto";

//request
message SceneRequest {
    int32 session = 1;  //消息序号

    int32 clientID = 3; //发送场景

    oneof request {
        space_move spaceMove = 5;
        space_enter spaceEnter = 6;
        space_leave spaceLeave = 7;
        get_state getState = 8;
    }

}


//response
message SceneResponse {
    int32 session = 1;

    oneof response {
        //ignore d s
        space_move_ret spaceMoveRet = 5;
        space_enter_ret spaceEnterRet = 6;
        space_leave_ret spaceLeaveRet = 7;
        get_state_ret getStateRet = 8;
    }
}

//push
message ScenePush {
    space_push spacePush = 1;
}